# mosaiq

./: .envrc  .gitignore  CHANGELOG.md  Makefile  README.md  environment.yml  mosaiq.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
src/: mosaiq.py
src/mosaiq/: __init__.py  _version.py
test/: test_default.py  testpackage.py
