[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mosaiq"
dynamic = ["version"]
authors = [
    { name = "Justin Donaldson", email = "jjd@jjd.io" }
]
description = "A generalized mosaic plotting function for categorical and numerical data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "build",
  "idna",
  "matplotlib",
  "bump-my-version",
  "statsmodels"
]
urls = { "Homepage" = "https://github.com/jdonaldson/mosaiq-python" }

[project.optional-dependencies]
dev = [
  "mosaiq[ci]"
]

ci = [
  "pytest-cov",
]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
write_to = "src/mosaiq/_version.py"


# [[tool.bumpversion.files]]
# filename = "CHANGELOG.md"
# search = "Unreleased"

# [[tool.bumpversion.files]]
# filename = "CHANGELOG.md"
# search = "{current_version}...HEAD"
# replace = "{current_version}...{new_version}"

# [pytest]
# addopts = "--cov=src"
# pythonpath = "src"
# testpaths = ["tests"]
