[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mosaiq"
version="0.1.8"
dynamic = ["version"]
authors = [
    { name = "Justin Donaldson", email = "jjd@jjd.io" }
]
description = "A generalized mosaic plotting function for categorical and numerical data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "pandas",
  "build",
  "idna",
  "matplotlib",
  "bump-my-version",
  "statsmodels"
]
urls = { "Homepage" = "https://github.com/jdonaldson/mosaiq-python" }

[project.optional-dependencies]
dev = [
  "mosaiq[ci]"
]

ci = [
  "pytest-cov",
]

[tool.bumpversion]
current_version = "0.1.8"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

# [[tool.bumpversion.files]]
# filename = "CHANGELOG.md"
# search = "Unreleased"

# [[tool.bumpversion.files]]
# filename = "CHANGELOG.md"
# search = "{current_version}...HEAD"
# replace = "{current_version}...{new_version}"

# [pytest]
# addopts = "--cov=src"
# pythonpath = "src"
# testpaths = ["tests"]
